tests/files/success/variable_mutation.rl
let mut x = 1;

x = 2;

let y = x + 3;
