tests/files/fail/variable_not_found_scope.rl
let x = 0;

{
    let b = 0;
}

let y = x + b;
